# qtmultimedia

./: .cmake.conf  .gitreview  .tag  CMakeLists.txt  README.md  REUSE.toml  config_help.txt  configure.cmake  dependencies.yaml  licenseRule.json  qt_cmdline.cmake
LICENSES/: BSD-3-Clause.txt  MIT.txt  Qt-GPL-exception-1.0.txt
cmake/: FindFFmpeg.cmake  FindGObject.cmake  FindGStreamer.cmake  FindMMRenderer.cmake  FindMMRendererCore.cmake  FindPipeWire.cmake  FindVAAPI.cmake  FindWMF.cmake  FindWrapPulseAudio.cmake  REUSE.toml
coin/: module_config.yaml
coin/axivion/: ci_config_linux.json
coin/instructions/: configure_tests_environment_for_ffmpeg_backend.yaml  run_ffmpeg_backend_tests.yaml  run_gstreamer_backend_tests.yaml
config.tests/gpu_vivante/: CMakeLists.txt  main.cpp
config.tests/linux_v4l/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  examples.pro
examples/multimedia/: CMakeLists.txt  multimedia.pro
examples/multimedia/video/recorder/: CMakeLists.txt  Controls.qml  MediaList.qml  PermissionHelper.qml  Playback.qml  RecordButton.qml  SettingsEncoder.qml  SettingsMetaData.qml  StyleParameter.qml  VideoSourceSelect.qml  main.cpp  main.qml
examples/multimedia/video/recorder/android/: AndroidManifest.xml
examples/multimedia/video/recorder/doc/src/: recorder.qdoc
examples/spatialaudio/: CMakeLists.txt  spatialaudio.pro
src/: CMakeLists.txt
src/android/: CMakeLists.txt
src/multimedia/: CMakeLists.txt  Qt6MultimediaMacros.cmake  configure.cmake  qcachedvalue_p.h  qmaybe_p.h  qmediadevices.cpp  qmediadevices.h  qmediaformat.cpp  qmediaformat.h  qmediaframeinput.cpp  qmediaframeinput_p.h  qmediainputencoderinterface_p.h  qmediametadata.cpp  qmediametadata.h  (+20 more)
tests/: CMakeLists.txt
util/: REUSE.toml  adt_generate_qt.m
(+1358 files in other folders)
